--- a/006-dogs-vs-cats.ipynb
+++ b/006-dogs-vs-cats.ipynb
@@ -17,7 +17,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -27,7 +29,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -50,7 +54,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "IMG_SIZE = (224, 224)  # размер входного изображения сети"
@@ -66,7 +72,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import re\n",
@@ -112,7 +120,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -145,7 +155,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# base_model -  объект класса keras.models.Model (Functional Model)\n",
@@ -157,7 +169,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -218,7 +232,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# фиксируем все веса предобученной сети\n",
@@ -238,7 +254,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x = base_model.output\n",
@@ -259,7 +277,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -335,7 +355,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model.compile(optimizer='adam', \n",
@@ -347,6 +369,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -362,7 +385,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -500,13 +525,7 @@
       "30/30 [==============================] - 5s - loss: 0.6442 - acc: 0.9594 - val_loss: 0.3206 - val_acc: 0.9800\n",
       "Epoch 66/200\n",
       "30/30 [==============================] - 5s - loss: 0.6499 - acc: 0.9594 - val_loss: 0.3206 - val_acc: 0.9800\n",
-      "Epoch 67/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 67/200\n",
       "30/30 [==============================] - 5s - loss: 0.3990 - acc: 0.9750 - val_loss: 0.4386 - val_acc: 0.9700\n",
       "Epoch 68/200\n",
       "30/30 [==============================] - 5s - loss: 0.9233 - acc: 0.9427 - val_loss: 0.4498 - val_acc: 0.9600\n",
@@ -638,13 +657,7 @@
       "30/30 [==============================] - 5s - loss: 0.6290 - acc: 0.9594 - val_loss: 0.3188 - val_acc: 0.9800\n",
       "Epoch 132/200\n",
       "30/30 [==============================] - 5s - loss: 0.6332 - acc: 0.9604 - val_loss: 0.3188 - val_acc: 0.9800\n",
-      "Epoch 133/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 133/200\n",
       "30/30 [==============================] - 5s - loss: 0.5387 - acc: 0.9656 - val_loss: 0.1594 - val_acc: 0.9900\n",
       "Epoch 134/200\n",
       "30/30 [==============================] - 5s - loss: 0.6849 - acc: 0.9573 - val_loss: 0.1594 - val_acc: 0.9900\n",
@@ -776,13 +789,7 @@
       "30/30 [==============================] - 5s - loss: 0.6856 - acc: 0.9573 - val_loss: 0.0010 - val_acc: 1.0000\n",
       "Epoch 198/200\n",
       "30/30 [==============================] - 5s - loss: 0.3953 - acc: 0.9750 - val_loss: 0.3383 - val_acc: 0.9700\n",
-      "Epoch 199/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 199/200\n",
       "30/30 [==============================] - 5s - loss: 0.4535 - acc: 0.9708 - val_loss: 0.3188 - val_acc: 0.9800\n",
       "Epoch 200/200\n",
       "30/30 [==============================] - 5s - loss: 0.4163 - acc: 0.9740 - val_loss: 1.1037e-07 - val_acc: 1.0000\n"
@@ -817,7 +824,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pred = model.predict_generator(predict_generator(test_files), len(test_files), max_queue_size=500)"
@@ -826,7 +835,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -859,7 +870,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with open('submit.txt', 'w') as dst:\n",
@@ -870,13 +883,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# LogLoss = 1.04979"
+    "![title](result/res_lab_3.png)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
